--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <img src="robot-juice-images/#" alt="Company logo" id="logo">
         <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="protect.html">Protect</a></li>
-                <li><a href="stock.html">Stocklist's</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a id="box1" href="index.html">Home</a></li>
+                <li><a id="box2" href="products.html">Products</a></li>
+                <li><a id="box3" href="protect.html">Protect</a></li>
+                <li><a id="box4" href="stock.html">Stocklist's</a></li>
+                <li><a id="box5" href="events.html">Events</a></li>
+                <li><a id="box6" href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
+        <img src="robot-juice-images/robotbanner.jpg" alt="robot banner" id="banner">
     </div>
 </body>
 </html>
