--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
     <title>Robot juice</title>
 </head>
 <body>
     <div class="container">
-        <img src="robot-juice-images/#" alt="Company logo" id="logo">
-        <nav id="nav">
+        <header id="logo">
+            <h1><span class="robot">Robot</span><span id="juice"> Juice</span></h1>
+            <p id="headertext">fictitious cycle lubricants</p>
+        </header>
+        <nav class="nav">
             <ul>
-                <li><a id="box1" href="index.html">Home</a></li>
-                <li><a id="box2" href="products.html">Products</a></li>
-                <li><a id="box3" href="protect.html">Protect</a></li>
-                <li><a id="box4" href="stock.html">Stocklist's</a></li>
-                <li><a id="box5" href="events.html">Events</a></li>
-                <li><a id="box6" href="reviews.html">Reviews</a></li>
+                <li><a href="#" id="box1">Home</a></li>
+                <li><a href="#" id="box2">Home</a></li>
+                <li><a href="#" id="box3">Home</a></li>
+                <li><a href="#" id="box4">Home</a></li>
+                <li><a href="#" id="box5">Home</a></li>
+                <li><a href="#" id="box6">Home</a></li>
             </ul>
         </nav>
-        <img src="robot-juice-images/robotbanner.jpg" alt="robot banner" id="banner">
     </div>
 </body>
 </html>
