logo,nav+banner

--- a/product.html
+++ b/product.html
@@ -24,16 +24,14 @@
 
         <nav class="nav">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="product.html">Products</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="product.html">Products</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Support</a></li>
             </ul>
         </nav>
-
-        <img src="robot-juice-images/robotbanner.jpg" alt="robot banner" id="banner">
 
     </div>
 </body>
