--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/grid.css">
     <title>Robot juice</title>
 </head>
 <body>
@@ -35,6 +36,87 @@
 
         <img src="robot-juice-images/robotbanner.jpg" alt="robot banner" id="banner">
 
+        <H2>Robot juice is the ultimate fictitious bicycle and motorcycle lubricant oils.</H2>
+
+        <section class="img-grid">
+            <article>
+                <img src="robot-juice-images/bikechain-bikeoil.jpg" alt="1st product thumbnail">
+                <h3>Bike Oil</h3>
+                <p>Stops and protects against rust, reduces friction on moving parts and is essential on any cycle.</p>
+            </article>
+            <article>
+                <img src="robot-juice-images/cycleside-drylubrication.jpg" alt="1st product thumbnail">
+                <h3>Dry lubricant</h3>
+                <p>Perfect chain lubricant for dry road riding. Resists water penetration and wash-off easily.</p>
+            </article>
+            <article>
+                <img src="robot-juice-images/frontcycle-wetlubrication.jpg" alt="1st product thumbnail">
+                <h3>Wet Lubricant</h3>
+                <p>A thick, heavy duty lube designed to stick to the chain in wet conditions. Ideal for extreme weather and long distant riding.</p>
+            </article>
+            <article>
+                <img src="robot-juice-images/productreviews.jpg" alt="1st product thumbnail">
+                <h3>Product Reviews</h3>
+                <p>Read what the press and our customers say about our excellent products.</p>
+            </article>
+        </section>
+
+        <section class="review-section">
+            <article id="reviews">
+                <h4>Latest News</h4>
+                <h5>News item one!</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </p>
+                <h4>Latest News</h4>
+                <h5>News item one!</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </p>
+                <h4>Latest News</h4>
+                <h5>News item one!</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </p>
+            </article>
+
+            <article id="poll">
+                <h3>Reader Poll</h3>
+                <p id="red-text">Are Robot Juice the best and most usable and accessible fake oils around?</p>
+                <form>
+                    <input type="radio" id="yes" name="the_best" value="YES">
+                    <label for="yes">Yes</label><br>
+                    <input type="radio" id="no" name="the_best" value="NO">
+                    <label for="no">No</label><br>
+                </form>
+                <h3>Compettion</h3>
+                <p>Win absolitely nothing by entering this extremely expensive competition.
+                    Robot juice will not send you a full range of our cycling and motorcycle oils and lubricants as we do not exist.
+                    but just for fun..
+                </p>
+                <p>Which Film is our address made up from?</p>
+                <p>a, Armageddon</p>
+                <p>b, Harry Potter</p>
+                <p>c, The Simpsons (Movie)</p>
+                <p>answers on a postcard please.</p>
+            </article>
+        </section>
+
+        <section class="useful">
+            <img src="robot-juice-images/cyclemagazine.jpg" alt="Cycle magazine">
+            <h3>Latest Reviews</h3>
+            <p>Cycling magazine has given Robot Juice a 5 star rating in its atest reviews of dry lubricants. 
+                Robot Juice Dry lube was rated the highest out of over 40 top brand dry lubs.
+            </p>
+            <h3>Links</h3>
+            <ul>
+                <a href="#">Edge Hill University</a>
+                <a href="#">Dave Walsh</a>
+                <a href="#">https://twitter.com/walsh_d</a>
+                <a href="#">CIS1110 - Web Design and Development module</a>
+            </ul>
+        </section>
+        
     </div>
 </body>
-</html>>
+</html>
