--- a/index.html
+++ b/index.html
@@ -7,116 +7,145 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Damion&family=Iceberg&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/grid.css">
     <title>Robot juice</title>
 </head>
-<body>
-        <div class="container">
 
-        <header id="logo">
-            <h1>
-                <span class="robot">Robot</span>
-                <span class="juice-group">
-                    <span class="juice">Juice</span>
-                    <span class="tagline">fictitious cycle lubricants</span>
-                </span>
-            </h1>
+<body>
+    <div class="container">
+        <header class="header">
+            <div class="logo">
+                <h1 class="site-title">
+                    <span class="robot">Robot</span>
+                    <span class="juice-group">
+                        <span class="juice">Juice</span>
+                        <span class="tagline">fictitious cycle lubricants</span>
+                    </span>
+                </h1>
+            </div>
+
+
+            <nav aria-label="Main navigation">
+                <ul class="nav">
+                <li class="active"><a aria-current="page" href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="#">Protect</a></li>
+                <li><a href="#">Stockists</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Reviews</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav class="nav">
-            <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Support</a></li>
-            </ul>
-        </nav>
+        <main id="main" class="content">
+            <section class="content-row">
+                <img src="robot-juice-images/robotbanner.jpg" alt="Robot banner" class="banner">
+            </section>
 
-        <img src="robot-juice-images/robotbanner.jpg" alt="robot banner" id="banner">
+            <section class="text-row">
+                <h2 class="text">Robot Juice is the ultimate fictitious bicycle and motorcycle lubricant oils</h2>
+            </section>
 
-        <H2>Robot juice is the ultimate fictitious bicycle and motorcycle lubricant oils.</H2>
-
-        <section class="img-grid">
-            <article>
+            <section class="img-grid">
+                <article class="grid1">
                 <img src="robot-juice-images/bikechain-bikeoil.jpg" alt="1st product thumbnail">
                 <h3>Bike Oil</h3>
                 <p>Stops and protects against rust, reduces friction on moving parts and is essential on any cycle.</p>
-            </article>
-            <article>
+                </article>
+
+                <article class="grid2">
                 <img src="robot-juice-images/cycleside-drylubrication.jpg" alt="1st product thumbnail">
                 <h3>Dry lubricant</h3>
                 <p>Perfect chain lubricant for dry road riding. Resists water penetration and wash-off easily.</p>
-            </article>
-            <article>
+                </article>
+
+                <article class="grid3">
                 <img src="robot-juice-images/frontcycle-wetlubrication.jpg" alt="1st product thumbnail">
                 <h3>Wet Lubricant</h3>
                 <p>A thick, heavy duty lube designed to stick to the chain in wet conditions. Ideal for extreme weather and long distant riding.</p>
-            </article>
-            <article>
+                </article>
+
+                <article class="grid4">
                 <img src="robot-juice-images/productreviews.jpg" alt="1st product thumbnail">
                 <h3>Product Reviews</h3>
                 <p>Read what the press and our customers say about our excellent products.</p>
-            </article>
-        </section>
+                </article>
+            </section>
 
-        <section class="review-section">
-            <article id="reviews">
-                <h4>Latest News</h4>
-                <h5>News item one!</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                </p>
-                <h4>Latest News</h4>
-                <h5>News item one!</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                </p>
-                <h4>Latest News</h4>
-                <h5>News item one!</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                </p>
-            </article>
+            <section class="review-section">
+                <article id="news">
+                    <h4>Latest News</h4>
+                    <h5>News item one!</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    </p>
+                    <h4>Latest News</h4>
+                    <h5>News item one!</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    </p>
+                    <h4>Latest News</h4>
+                    <h5>News item one!</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    </p>
+                </article>
 
-            <article id="poll">
-                <h3>Reader Poll</h3>
-                <p id="red-text">Are Robot Juice the best and most usable and accessible fake oils around?</p>
-                <form>
-                    <input type="radio" id="yes" name="the_best" value="YES">
-                    <label for="yes">Yes</label><br>
-                    <input type="radio" id="no" name="the_best" value="NO">
-                    <label for="no">No</label><br>
-                </form>
-                <h3>Compettion</h3>
-                <p>Win absolitely nothing by entering this extremely expensive competition.
-                    Robot juice will not send you a full range of our cycling and motorcycle oils and lubricants as we do not exist.
-                    but just for fun..
-                </p>
-                <p>Which Film is our address made up from?</p>
-                <p>a, Armageddon</p>
-                <p>b, Harry Potter</p>
-                <p>c, The Simpsons (Movie)</p>
-                <p>answers on a postcard please.</p>
-            </article>
-        </section>
-
-        <section class="useful">
-            <img src="robot-juice-images/cyclemagazine.jpg" alt="Cycle magazine">
-            <h3>Latest Reviews</h3>
-            <p>Cycling magazine has given Robot Juice a 5 star rating in its atest reviews of dry lubricants. 
-                Robot Juice Dry lube was rated the highest out of over 40 top brand dry lubs.
-            </p>
-            <h3>Links</h3>
-            <ul>
-                <a href="#">Edge Hill University</a>
-                <a href="#">Dave Walsh</a>
-                <a href="#">https://twitter.com/walsh_d</a>
-                <a href="#">CIS1110 - Web Design and Development module</a>
-            </ul>
-        </section>
-        
+                <article id="poll">
+                    <h3>Reader Poll</h3>
+                    <p id="red-text">Are Robot Juice the best and most usable and accessible fake oils around?</p>
+                    <form>
+                        <input type="radio" id="yes" name="the_best" value="YES">
+                        <label for="yes">Yes</label><br>
+                        <input type="radio" id="no" name="the_best" value="NO">
+                        <label for="no">No</label><br>
+                    </form>
+                    <h3>Compettion</h3>
+                    <p>Win absolitely nothing by entering this extremely expensive competition.
+                        Robot juice will not send you a full range of our cycling and motorcycle oils and lubricants as we do not exist.
+                        but just for fun..
+                    </p>
+                    <p>Which Film is our address made up from?</p>
+                    <p>a, Armageddon</p>
+                    <p>b, Harry Potter</p>
+                    <p>c, The Simpsons (Movie)</p>
+                    <p>answers on a postcard please.</p>
+                </article>
+            </section>
+        </main>
     </div>
+
+            <footer class="footer">
+            <section class="magazine">
+                <img src="robot-juice-images/cyclemagazine.jpg" alt="Cycle magazine" id="magazine">
+
+                    <article class="reviews">
+                        <h3>Latest Reviews</h3>
+                        <p>Cycling magazine has given Robot Juice a 5 star rating in its latest reviews of dry lubricants.
+                        Robot Juice Dry lube was rated the highest out of over 40 top brand dry lubs.
+                        </p>
+                    </article>
+
+                    <article class="links">
+                        <h3>Links</h3>
+                        <ul>
+                            <li><a href="#">Edge Hill University</a></li>
+                            <li><a href="#">Dave Walsh</a></li>
+                            <li><a href="#">https://twitter.com/walsh_d</a></li>
+                            <li><a href="#">CIS110 - Web Design and Development module</a></li>
+                        </ul>
+                    </article>
+
+            </section>
+            <section class="info">
+                <p>Robot Juice Fictitious Products Not Ltd.,Unit 9 3/4, Privet Drive, Little Whingeing, Surrey DN18 5RP</p>
+                <p>Telephone: +44 (0)1695 657648. Email: walshd@edgehill.ac.uk</p>
+
+                <p>Contact Us | Privacy | Terms & Conditions | Accessibility</p>
+                <p>Copyright 2018 Dave Walsh. Design by Dave Walsh</p>
+            </section>
+        </footer>
 </body>
 </html>
